// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip alignment right-aligned 1`] = `
.c1 {
  --tooltip-space: 0.5rem;
  right: 0;
  border: 1px solid;
  box-shadow: 0px 2.4px 7.2px rgba(0,0,0,0.18),0px 12.8px 28.8px rgba(0,0,0,0.22);
  z-index: 1;
  position: absolute;
  max-width: 100%;
  padding: var(--tooltip-space);
  margin-top: var(--tooltip-space);
  background-color: #232A33;
  border-color: #31373F;
  border-radius: 0.25rem;
  color: #FFFFFF;
  will-change: transform;
  -webkit-animation: gcKUNh 0.2s ease-in-out;
  animation: gcKUNh 0.2s ease-in-out;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}

.c1 .c3 {
  color: #8697A2;
}

.c2 {
  position: relative;
}

.c0 {
  position: relative;
}

<div
  aria-hidden={false}
  className="c0"
  id="test-id"
  role="tooltip"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p>
        Hi, I'm a Tooltip
      </p>
    </div>
  </div>
</div>
`;

exports[`Tooltip renders as active when defined 1`] = `
.c1 {
  --tooltip-space: 0.5rem;
  left: 0;
  border: 1px solid;
  box-shadow: 0px 2.4px 7.2px rgba(0,0,0,0.18),0px 12.8px 28.8px rgba(0,0,0,0.22);
  z-index: 1;
  position: absolute;
  max-width: 100%;
  padding: var(--tooltip-space);
  margin-top: var(--tooltip-space);
  background-color: #232A33;
  border-color: #31373F;
  border-radius: 0.25rem;
  color: #FFFFFF;
  will-change: transform;
  -webkit-animation: gcKUNh 0.2s ease-in-out;
  animation: gcKUNh 0.2s ease-in-out;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}

.c1 .c3 {
  color: #8697A2;
}

.c2 {
  position: relative;
}

.c0 {
  position: relative;
}

<div
  aria-hidden={false}
  className="c0"
  id="test-id"
  role="tooltip"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p>
        Hi, I'm a Tooltip
      </p>
    </div>
  </div>
</div>
`;

exports[`Tooltip renders as an error 1`] = `
.c1 {
  --tooltip-space: 0.5rem;
  left: 0;
  border: 1px solid;
  box-shadow: 0px 2.4px 7.2px rgba(0,0,0,0.18),0px 12.8px 28.8px rgba(0,0,0,0.22);
  z-index: 1;
  position: absolute;
  max-width: 100%;
  padding: var(--tooltip-space);
  margin-top: var(--tooltip-space);
  background-color: #FF4E64;
  border-color: #31373F;
  border-radius: 0.25rem;
  color: #FFFFFF;
  will-change: transform;
  -webkit-animation: gcKUNh 0.2s ease-in-out;
  animation: gcKUNh 0.2s ease-in-out;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-direction: reverse;
  animation-direction: reverse;
}

.c1 .c3 {
  color: #8697A2;
}

.c2 {
  position: relative;
}

.c0 {
  position: relative;
}

<div
  aria-hidden={false}
  className="c0"
  id="test-id"
  role="tooltip"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p>
        Hi, I'm a Tooltip
      </p>
    </div>
  </div>
</div>
`;

exports[`Tooltip renders hidden and left-aligned by default 1`] = `
.c1 {
  --tooltip-space: 0.5rem;
  left: 0;
  border: 1px solid;
  box-shadow: 0px 2.4px 7.2px rgba(0,0,0,0.18),0px 12.8px 28.8px rgba(0,0,0,0.22);
  z-index: 1;
  position: absolute;
  max-width: 100%;
  padding: var(--tooltip-space);
  margin-top: var(--tooltip-space);
  background-color: #232A33;
  border-color: #31373F;
  border-radius: 0.25rem;
  color: #FFFFFF;
  will-change: transform;
  -webkit-animation: gcKUNh 0.2s ease-in-out;
  animation: gcKUNh 0.2s ease-in-out;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.c1 .c3 {
  color: #8697A2;
}

.c2 {
  position: relative;
}

.c0 {
  position: relative;
}

<div
  aria-hidden={true}
  className="c0"
  id="test-id"
  role="tooltip"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <p>
        Hi, I'm a Tooltip
      </p>
    </div>
  </div>
</div>
`;

exports[`Tooltip renders with close button if onClose handler was passed closeable 1`] = `
.c5 {
  vertical-align: middle;
}

.c1 {
  --tooltip-space: 0.5rem;
  left: 0;
  border: 1px solid;
  box-shadow: 0px 2.4px 7.2px rgba(0,0,0,0.18),0px 12.8px 28.8px rgba(0,0,0,0.22);
  z-index: 1;
  position: absolute;
  max-width: 100%;
  padding: var(--tooltip-space);
  margin-top: var(--tooltip-space);
  background-color: #232A33;
  border-color: #31373F;
  border-radius: 0.25rem;
  color: #FFFFFF;
  will-change: transform;
  -webkit-animation: gcKUNh 0.2s ease-in-out;
  animation: gcKUNh 0.2s ease-in-out;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.c1 .c4 {
  color: #8697A2;
}

.c6 .c4 {
  color: #8697A2;
}

.c7 .c4 {
  color: #8697A2;
}

.c2 {
  position: relative;
  padding-right: calc(var(--tooltip-space) + 0.8rem);
}

.c0 {
  position: relative;
}

.c3 {
  background: none;
  padding: 0;
  cursor: pointer;
  border: none;
  font-size: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 0;
  font-size: 0.8rem;
}

<div
  aria-hidden={true}
  className="c0"
  id="test-id"
  role="tooltip"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      onClose={[Function]}
    >
      <p>
        Hi, I'm a Tooltip
      </p>
      <button
        className="c3"
      >
        <svg
          className="c4 c5"
          fontSize="inherit"
          height="1em"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.609 10L20 17.391 17.391 20 10 12.609 2.609 20 0 17.391 7.391 10 0 2.609 2.609 0 10 7.391 17.391 0 20 2.609z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
